@@ -125,11 +125,12 @@ class Event {
 public:
 	enum {
 		ACTIVATE_ON_TRIGGER = 0,
-		ACTIVATE_ON_MAPEXIT = 1,
-		ACTIVATE_ON_LEAVE = 2,
-		ACTIVATE_ON_LOAD = 3,
-		ACTIVATE_ON_CLEAR = 4,
-		ACTIVATE_STATIC = 5
+		ACTIVATE_ON_INTERACT = 1,
+		ACTIVATE_ON_MAPEXIT = 2,
+		ACTIVATE_ON_LEAVE = 3,
+		ACTIVATE_ON_LOAD = 4,
+		ACTIVATE_ON_CLEAR = 5,
+		ACTIVATE_STATIC = 6
 	};
 
 	std::string type;
