@@ -93,7 +93,7 @@ void NPCManager::handleNewMap() {
 		EventComponent ec;
 
 		// the event hotspot is a 1x1 tile at the npc's feet
-		ev.activate_type = Event::ACTIVATE_ON_TRIGGER;
+		ev.activate_type = Event::ACTIVATE_ON_INTERACT;
 		ev.keep_after_trigger = true;
 		Rect location;
 		location.x = static_cast<int>(npc->pos.x);
