@@ -32,6 +32,7 @@ Engine features:
 * Added 'parallax_layers' property to Events. This functions exactly like the Map property of the same name.
 * Added 'visible' and 'visible_when_locked' to powers and upgrades in power trees.
 * Added 'requires_status' and 'requires_not_status' to powers and upgrades in power trees. 'visible_requires_status' and 'visible_requires_not_status' have been marked as deprecated.
+* Added 'on_interact' as a possible value for Event types. Essentially the same as 'on_trigger', except the event can ONLY be activated through the hotspot.
 
 Engine fixes:
 
